Fixes line breaks in free domain explainer

--- a/client/components/domains/free-domain-explainer/style.scss
+++ b/client/components/domains/free-domain-explainer/style.scss
@@ -41,6 +41,15 @@ body.is-section-signup.is-white-signup {
             font-size: 1rem;
             margin-bottom: 0;
 
+            &::after {
+                content: ' ';
+                
+                @include break-mobile {
+                    content: '\a';
+                    white-space: pre;
+                }
+            }
+
             .free-domain-explainer__subtitle-link {
                 display: block;
                 color: var( --color-neutral-60 );
